# ginkgo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  ginkgo.sln  imgui.ini
engine/include/: animation.h  button.h  camera.h  component.h  ginkgo.h  label.h  node.h  physics.h  resource.h  scene.h  shader.h  sprite.h
engine/src/: animation.cpp  button.cpp  camera.cpp  component.cpp  ginkgo.cpp  glad.cpp  label.cpp  node.cpp  physics.cpp  resource.cpp  scene.cpp  shader.cpp  sprite.cpp  stb.cpp
ginkgo/: ginkgo.vcxproj  ginkgo.vcxproj.filters
ginkgo/include/: animation.h  camera.h  gameconfig.h  ginkgo.h  layer.h  macros.h  node.h  scene.h  shader.h  sprite.h  sprite2d.h  text.h  texture.h
ginkgo/lib/Debug/: assimp-vc140-mt.lib
ginkgo/lib/Release/: assimp-vc140-mt.lib  glfw3.lib
ginkgo/src/: animation.cpp  camera.cpp  ginkgo.cpp  layer.cpp  node.cpp  scene.cpp  shader.cpp  sprite.cpp  sprite2d.cpp  stb.cpp  text.cpp  texture.cpp
res/: config.json
res/shaders/: binaryzation.fs  blur.fs  general.vs  gray.fs  wave.fs
src/: main.cpp  test.h  test01.cpp  test01.h  test02.cpp  test02.h  test03.cpp  test03.h  test04.cpp  test04.h  test05.cpp  test05.h  test06.cpp  test06.h  welcome.h
test/: game.cpp  game.h  main.cpp  test.vcxproj  test.vcxproj.filters
test/res/: config.json  effect.fs  effect.vs  gray.fs
test/res/nanakase/: Nanakase.psd
test/res/shiranui/: shiranui.psd
